--- a/compose/fdo-ov-watcher/docker-compose.yml
+++ b/compose/fdo-ov-watcher/docker-compose.yml
@@ -10,26 +10,20 @@ services:
         source: ./ov_output
         target: /ov_output
   web-server:
-    image: caddy:latest
+    image: nginx:latest
     restart: unless-stopped
     ports:
       - 8077:80
     configs:
-      - source: caddy-config
-        target: /etc/caddy/Caddyfile
+      - source: nginx-config
+        target: /etc/nginx/conf.d/default.conf
     volumes:
-      - type: volume
-        source: caddy-data
-        target: /data
       - type: bind
         source: ./ov_output
-        target: /usr/share/caddy
+        target: /ov_output
 
 configs:
   ov-watcher-config:
     file: ./config/config.yml
-  caddy-config:
-    file: ./config/Caddyfile
-
-volumes:
-  caddy-data:
+  nginx-config:
+    file: ./config/default.conf
