--- a/images/dind/supervisor/dockerd.conf
+++ b/images/dind/supervisor/dockerd.conf
@@ -1,5 +1,5 @@
 [program:dockerd]
-command=/usr/local/bin/dockerd
+command=/usr/local/bin/dockerd --host=unix:///var/run/docker.sock --host=tcp://0.0.0.0:2376 --tlsverify --tlscacert /certs/server/ca.pem --tlscert /certs/server/cert.pem --tlskey /certs/server/key.pem
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/dockerd.err.log
