--- a/images/dind/Dockerfile
+++ b/images/dind/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -yq \
 	uuid-runtime \
 	iputils-ping \
 	iproute2 \
+	nano \
     supervisor \
  && rm -rf /var/lib/apt/lists/*
 
