--- a/compose/reverse-proxy/nginx/nginx.conf
+++ b/compose/reverse-proxy/nginx/nginx.conf
@@ -7,19 +7,22 @@ http {
     listen 80;
 
     location / {
+
+        if ($http_user_agent = "") {
+            set $wsport 8000
+        }
+
+        if ($http_user_agent != "") {
+            set $wsport 9000
+        }
+
         # TODO
         # Websocket is also used by console, might require some path parsing or something else in the condition
         # Checking if the User-Agent header exists could be a good solution
 
-        if ($http_upgrade = "websocket" ) {
-            if ($http_user_agent = "") {
-                proxy_pass http://portainer1:8000;
-
-            }
-
-            if ($http_user_agent != "") {
-                proxy_pass http://portainer1:9000;
-            }
+        if ($http_upgrade = "websocket") {
+            
+            proxy_pass http://portainer1:$wsport;
 
             proxy_http_version 1.1;
             proxy_set_header Upgrade websocket;
