--- a/compose/reverse-proxy/nginx/nginx.conf
+++ b/compose/reverse-proxy/nginx/nginx.conf
@@ -9,11 +9,11 @@ http {
     location / {
 
         if ($http_user_agent = "") {
-            set $wsport 8000
+            set $wsport 8000;
         }
 
         if ($http_user_agent != "") {
-            set $wsport 9000
+            set $wsport 9000;
         }
 
         # TODO
@@ -21,9 +21,7 @@ http {
         # Checking if the User-Agent header exists could be a good solution
 
         if ($http_upgrade = "websocket") {
-            
             proxy_pass http://portainer1:$wsport;
-
             proxy_http_version 1.1;
             proxy_set_header Upgrade websocket;
             proxy_set_header Connection upgrade;
