--- a/compose/reverse-proxy/nginx/http-ip-detection/docker-compose.yml
+++ b/compose/reverse-proxy/nginx/http-ip-detection/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   reverse-proxy:
-    build: ./build
+    image: nginx:alpine
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
